--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven'
 
 group 'com.github.ahaverty'
 version '1.1'
@@ -7,8 +8,22 @@ repositories {
     mavenCentral()
 }
 
-//noinspection GroovyAssignabilityCheck
 dependencies {
     compile 'com.google.firebase:firebase-server-sdk:[3.0.0,)'
     compile 'io.reactivex:rxjava:1.1.6'
+}
+
+// To specify a license in the pom:
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
 }
